--- a/aria2/Dockerfile.loong64
+++ b/aria2/Dockerfile.loong64
@@ -18,8 +18,10 @@ RUN tar -xzf /tmp/aria2-${ARIA2_VERSION}.tar.gz -C /tmp
 RUN cd /tmp/aria2-${ARIA2_VERSION} && \
     ./configure --prefix=/opt/aria2 --with-openssl --without-gnutls --without-libnettle --without-libgmp --without-libexpat --without-libssh2 --with-ca-bundle='/etc/ssl/certs/ca-certificates.crt' && \
     make -j$(nproc) && \
-    make install
-
+    make install && \
+    mkdir -p /opt/aria2/downloads && \
+    touch /opt/aria2/aria2.session && \
+    chmod +x /opt/aria2/bin/aria2c
 FROM ghcr.io/loong64/alpine:edge
 
 LABEL org.opencontainers.image.authors="The OpenList Team" \
@@ -45,16 +47,11 @@ ENV RPC_LISTEN_PORT=6800 \
 EXPOSE 6800
 
 RUN addgroup -g 1001 aria2 && \
-    adduser -D -u 1001 -G aria2 aria2 && \
-    mkdir -p /opt/aria2/downloads && \
-    touch /opt/aria2/aria2.session && \
-    chown -R aria2:aria2 /opt/aria2 && \
-    chmod +x /opt/aria2/bin/aria2c
-
-COPY --from=build --chown 1001:1001 /opt/aria2 /opt/aria2
-COPY --chown 1001:1001 ./aria2.conf /opt/aria2/aria2.conf
-COPY --chown 1001:1001  --chmod=+x ./entrypoint.sh /entrypoint.sh
+    adduser -D -u 1001 -G aria2 aria2
 
 USER 1001:1001
-
+COPY --from=build --chown=1001:1001 /opt/aria2 /opt/aria2
+COPY --chown=1001:1001 ./aria2.conf /opt/aria2/aria2.conf
+COPY --chown=1001:1001  --chmod=+x ./entrypoint.sh /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
+
