--- a/.github/workflows/build-aria2.yaml
+++ b/.github/workflows/build-aria2.yaml
@@ -122,7 +122,7 @@ jobs:
       - name: Download all digests
         uses: actions/download-artifact@v4
         with:
-          path: ${{ runner.temp }}/digests
+          path: ${{ runner.temp }}/digests-*
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
