--- a/.github/workflows/build-aria2.yaml
+++ b/.github/workflows/build-aria2.yaml
@@ -39,9 +39,9 @@ jobs:
           - name: linux-amd64
             platforms: linux/amd64
             dockerfile: ./aria2/Dockerfile
-          - name: linux-arm64
-            platforms: linux/arm64
-            dockerfile: ./aria2/Dockerfile
+          # - name: linux-arm64
+          #   platforms: linux/arm64
+          #   dockerfile: ./aria2/Dockerfile
           # - name: linux-arm-v7
           #   platforms: linux/arm/v7
           #   dockerfile: ./aria2/Dockerfile
@@ -122,6 +122,7 @@ jobs:
       - name: Download all digests
         uses: actions/download-artifact@v4
         with:
+          name: digests-*
           path: ${{ runner.temp }}/digests-*
 
       - name: Login to GitHub Container Registry
