--- a/.github/workflows/build-aria2.yaml
+++ b/.github/workflows/build-aria2.yaml
@@ -123,7 +123,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: digests-*
-          path: ${{ runner.temp }}/digests-*
+          path: ${{ runner.temp }}/digests
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
