--- a/.github/workflows/build-aria2.yaml
+++ b/.github/workflows/build-aria2.yaml
@@ -93,9 +93,26 @@ jobs:
 
       - name: build aria2 (if not cached)
         if: steps.cache-aria2.outputs.cache-hit != 'true'
-        run: bash ./aria2/build-aria2.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ARIA2_VERSION: ${{ env.ARIA2_VERSION }}
+        run: |
+          if [ -z "$ARIA2_VERSION" ]; then
+            echo "Please set ARIA2_VERSION environment variable."
+            exit 1
+          fi
+          sudo apt update
+          sudo apt install -y build-essential libssl-dev libxml2-dev libsqlite3-dev zlib1-dev libc-ares-dev pkgconf wget
+          mkdir -p aria2/build
+          wget -O /tmp/aria2-${ARIA2_VERSION}.tar.gz
+          cd /tmp
+          tar -xzf /tmp/aria2-${ARIA2_VERSION}.tar.gz
+          cd /tmp/aria2-${ARIA2_VERSION}
+          ./configure --prefix=aria2/build --with-openssl --without-gnutls --without-libnettle --without-libgmp --without-libexpat --without-libssh2 --with-ca-bundle='/etc/ssl/certs/ca-certificates.crt'
+          make -j$(nproc)
+          make install
+          echo "Aria2 version $(aria2/build/bin/aria2c --version | head -n 1) "
+          rm -rf /tmp/aria2-${ARIA2_VERSION} /tmp/aria2-${ARIA2_VERSION}.tar.gz
 
       - name: Build and push Docker image (${{ matrix.name }})
         uses: docker/build-push-action@v6
