--- a/.github/workflows/build-aria2.yaml
+++ b/.github/workflows/build-aria2.yaml
@@ -114,7 +114,11 @@ jobs:
           make -j$(nproc)
           make install
           echo "Aria2 version $(aria2/build/bin/aria2c --version | head -n 1) "
-
+          echo "Aria2 build directory: $out_dir"
+          echo "ls -la $out_dir"
+          ls -la $out_dir
+          echo "ls -la $out_dir/bin"
+          ls -la $out_dir/bin
           rm -rf /tmp/aria2-${ARIA2_VERSION} /tmp/aria2-${ARIA2_VERSION}.tar.gz
 
       - name: Build and push Docker image (${{ matrix.name }})
