--- a/.github/workflows/build-aria2.yaml
+++ b/.github/workflows/build-aria2.yaml
@@ -159,6 +159,7 @@ jobs:
       - name: Download all digests
         uses: actions/download-artifact@v4
         with:
+          name: digests-${{ matrix.name }}
           path: ${{ runner.temp }}/digests
 
       - name: Login to GitHub Container Registry
