--- a/.github/workflows/build-aria2.yaml
+++ b/.github/workflows/build-aria2.yaml
@@ -155,40 +155,13 @@ jobs:
   merge:
     name: Merge manifests
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - name: linux-amd64
-            platforms: linux/amd64
-            dockerfile: ./aria2/Dockerfile.ci
-          # - name: linux-arm64
-          #   platforms: linux/arm64
-          #   dockerfile: ./aria2/Dockerfile.ci
-          # - name: linux-arm-v7
-          #   platforms: linux/arm/v7
-          #   dockerfile: ./aria2/Dockerfile.ci
-          # - name: linux-386
-          #   platforms: linux/386
-          #   dockerfile: ./aria2/Dockerfile.ci
-          # - name: linux-arm-v6
-          #   platforms: linux/arm/v6
-          #   dockerfile: ./aria2/Dockerfile.ci
-          # - name: linux-ppc64le
-          #   platforms: linux/ppc64le
-          #   dockerfile: ./aria2/Dockerfile.ci
-          # - name: linux-riscv64
-          #   platforms: linux/riscv64
-          #   dockerfile: ./aria2/Dockerfile.ci
-          # - name: linux-loong64
-          #   platforms: linux/loong64
-          #   dockerfile: ./aria2/Dockerfile.ci.loong64    
     needs: build-aria2-image
     steps:
       - name: Download all digests
         uses: actions/download-artifact@v4
         with:
-          name: digests-${{ matrix.name }}
-          path: ${{ runner.temp }}/digests-${{ matrix.name }}
+          patter: digests-*
+          path: ${{ runner.temp }}/digests
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -205,36 +178,27 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Create manifest list and push (DockerHub)
-        working-directory: ${{ runner.temp }}/digests-${{ matrix.image }}
+      - name: Create manifest list and push
+        working-directory: ${{ runner.temp }}/digests
         run: |
-          echo "🔍 Available digests :"
+          echo "🔍 Available digests:"
           ls -la
-          # Collect all digests for DockerHub
-          digests=$(find . -name 'digest-*' -exec cat {} \; | grep "${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}" | sed 's|^.*@||')
-          refs=""
-          for digest in $digests; do
-            refs="$refs ${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}@${digest}"
-          done
+          
+          # Create manifest for DockerHub
+          echo "📦 Creating DockerHub manifest ..."
           docker buildx imagetools create \
-            -t ${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}:latest \
-            $refs
-
-      - name: Create manifest list and push (GHCR)
-        working-directory: ${{ runner.temp }}/digests-${{ matrix.image }}
-        run: |
-          digests=$(find . -name 'digest-*' -exec cat {} \; | grep "${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}" | sed 's|^.*@||')
-          refs=""
-          for digest in $digests; do
-            refs="$refs ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}@${digest}"
-          done
+            -t ${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }} \
+            $(printf '${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}@sha256:%s ' *)
+          
+          # Create manifest for GHCR
+          echo "📦 Creating GHCR manifest ..."
           docker buildx imagetools create \
-            -t ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}:latest \
-            $refs
+            -t ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }} \
+            $(printf '${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}@sha256:%s ' *)
 
-      - name: Inspect images
+      - name: Inspect image
         run: |
           echo "🔍 Inspecting DockerHub image..."
-          docker buildx imagetools inspect ${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}:latest
+          docker buildx imagetools inspect ${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}
           echo "🔍 Inspecting GHCR image..."
-          docker buildx imagetools inspect ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}:latest
+          docker buildx imagetools inspect ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}
