--- a/.github/workflows/build-aria2.yaml
+++ b/.github/workflows/build-aria2.yaml
@@ -160,7 +160,7 @@ jobs:
       - name: Download all digests
         uses: actions/download-artifact@v4
         with:
-          patter: digests-*
+          pattern: digests-*
           path: ${{ runner.temp }}/digests
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
