--- a/.github/workflows/build-aria2.yaml
+++ b/.github/workflows/build-aria2.yaml
@@ -39,27 +39,27 @@ jobs:
           - name: linux-amd64
             platforms: linux/amd64
             dockerfile: ./aria2/Dockerfile.ci
-          # - name: linux-arm64
-          #   platforms: linux/arm64
-          #   dockerfile: ./aria2/Dockerfile.ci
-          # - name: linux-arm-v7
-          #   platforms: linux/arm/v7
-          #   dockerfile: ./aria2/Dockerfile.ci
-          # - name: linux-386
-          #   platforms: linux/386
-          #   dockerfile: ./aria2/Dockerfile.ci
-          # - name: linux-arm-v6
-          #   platforms: linux/arm/v6
-          #   dockerfile: ./aria2/Dockerfile.ci
-          # - name: linux-ppc64le
-          #   platforms: linux/ppc64le
-          #   dockerfile: ./aria2/Dockerfile.ci
-          # - name: linux-riscv64
-          #   platforms: linux/riscv64
-          #   dockerfile: ./aria2/Dockerfile.ci
-          # - name: linux-loong64
-          #   platforms: linux/loong64
-          #   dockerfile: ./aria2/Dockerfile.ci.loong64
+          - name: linux-arm64
+            platforms: linux/arm64
+            dockerfile: ./aria2/Dockerfile.ci
+          - name: linux-arm-v7
+            platforms: linux/arm/v7
+            dockerfile: ./aria2/Dockerfile.ci
+          - name: linux-386
+            platforms: linux/386
+            dockerfile: ./aria2/Dockerfile.ci
+          - name: linux-arm-v6
+            platforms: linux/arm/v6
+            dockerfile: ./aria2/Dockerfile.ci
+          - name: linux-ppc64le
+            platforms: linux/ppc64le
+            dockerfile: ./aria2/Dockerfile.ci
+          - name: linux-riscv64
+            platforms: linux/riscv64
+            dockerfile: ./aria2/Dockerfile.ci
+          - name: linux-loong64
+            platforms: linux/loong64
+            dockerfile: ./aria2/Dockerfile.ci.loong64
 
     steps:
       - name: Checkout code
